# tinyllamaantihallu

./: .env.example  .gitignore  Double Prompting for Hallucination Reduction.txt  pyproject.toml
config/: default.yaml
data/libreeval/libreeval-non-synthetic-hallucinations-en/: README.md
data/libreeval/libreeval-synthetic-hallucinations-en/: README.md
pipelines/libreeval_rag_vs_sandwich/: README.md  run.py
pipelines/llm_judge_no_rag/: README.md  run.py
pipelines/llm_judge_with_rag/: README.md  run.py
pipelines/prompt_duplication_no_rag/: README.md  run.py
src/genai_research/: __init__.py  __main__.py  cli.py  config.py  gemini_api.py  io.py  model.py  paths.py  prompting.py
tests/: test_prompting.py
useful_outputs/llm_judge_no_rag_gemini_all_v2_(Question: <QUERY> Question: <QUERY>)/: summary_all.json
useful_outputs/llm_judge_no_rag_gemini_all_v2_(Question: <QUERY> Question: <QUERY>)/nq_open/: predictions.jsonl  summary.json
useful_outputs/llm_judge_no_rag_gemini_all_v2_(Question: <QUERY> Question: <QUERY>)/popqa/: predictions.jsonl  summary.json
useful_outputs/llm_judge_with_rag_gemini_(<QUERY> <INSTRUCTION> Context: <CONTEXT> <QUERY> <INSTRUCTION> )/: predictions.jsonl  summary.json
useful_outputs/llm_judge_with_rag_gemini_(no_rag)/: predictions.jsonl  summary.json
useful_outputs/llm_judge_with_rag_gemini_new/: predictions.jsonl  summary.json
useful_outputs/llm_judge_with_rag_gemini_v2_(<INSTRUCTION> Context: <CONTEXT> <QUERY> Context: <CONTEXT> <QUERY>)/: predictions.jsonl  summary.json
(+2 files in other folders)
